<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PasswordMaker X</string>

    <string name="about_attribution">By Eddie Ringle</string>

    <string name="action_save">Save</string>
    <string name="action_add_profile">Add Profile</string>
    <string name="action_delete">Delete</string>
    <string name="action_report_issue">Report Issue</string>

    <string name="report_issue_url">https://github.com/eddieringle/PasswordMaker_X/issues</string>

    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_profile_edit">Edit Profile</string>

    <string name="title_section_generate">Generate</string>
    <string name="title_section_profiles">Profiles</string>
    <string name="title_section_about">About</string>

    <string name="profile_edit_label_name">Profile Name</string>
    <string name="profile_edit_label_url_components">URL Components</string>
    <string name="profile_edit_label_url_protocol">Protocol</string>
    <string name="profile_edit_label_url_subdomains">Subdomain(s)</string>
    <string name="profile_edit_label_url_domain">Domain</string>
    <string name="profile_edit_label_url_other">Port, path, anchor, query params</string>
    <string name="profile_edit_label_hashing_algorithm">Hashing Algorithm</string>
    <string name="profile_edit_label_l33t_options">l33t Options</string>
    <string name="profile_edit_label_password_length">Password Length</string>
    <string name="profile_edit_label_username">Username</string>
    <string name="profile_edit_label_modifier">Modifier</string>
    <string name="profile_edit_label_charset">Character Set</string>
    <string name="profile_edit_label_password_prefix">Password Prefix</string>
    <string name="profile_edit_label_password_suffix">Password Suffix</string>

    <string name="profile_edit_hint_custom_charset">Custom character set</string>

    <string name="toast_profile_save_success">Profile saved</string>
    <string name="toast_profile_list_default">Default profile created due to empty profile list</string>

    <!-- Character Sets -->
    <string name="charset_alpha">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="charset_alphanum">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="charset_alphanumsym">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789`~!@#$%^&amp;*()_-+={}|[]\:";'&lt;&gt;?,./</string>
    <string name="charset_hex">0123456789abcdef</string>
    <string name="charset_numbers">0123456789</string>
    <string name="charset_symbols">`~!@#$%^&amp;*()_-+={}|[]\:";'&lt;&gt;?,./</string>

    <string name="charset_alpha_name">Alphas</string>
    <string name="charset_alphanum_name">Alphanumerics</string>
    <string name="charset_alphanumsym_name">Alphanumerics &amp; Symbols</string>
    <string name="charset_hex_name">Hexadecimal</string>
    <string name="charset_numbers_name">Numbers</string>
    <string name="charset_symbols_name">Symbols</string>
    <string name="charset_custom_name">Custom set</string>

    <string-array name="character_sets">
        <item>@string/charset_alpha_name</item>
        <item>@string/charset_alphanum_name</item>
        <item>@string/charset_alphanumsym_name</item>
        <item>@string/charset_hex_name</item>
        <item>@string/charset_numbers_name</item>
        <item>@string/charset_symbols_name</item>
        <item>@string/charset_custom_name</item>
    </string-array>

    <!-- Hash Algorithms -->
    <string name="hash_md4">MD4</string>
    <string name="hash_hmac_md4">HMAC-MD4</string>
    <string name="hash_md5">MD5</string>
    <string name="hash_md5_v6">MD5 Version 0.6</string>
    <string name="hash_hmac_md5">HMAC-MD5</string>
    <string name="hash_hmac_md5_v6">HMAC-MD5 Version 0.6</string>
    <string name="hash_sha1">SHA-1</string>
    <string name="hash_hmac_sha1">HMAC-SHA-1</string>
    <string name="hash_sha256">SHA-256</string>
    <string name="hash_hmac_sha256_fix">HMAC-SHA-256</string>
    <string name="hash_hmac_sha256">HMAC-SHA-256 Version 1.5.1</string>
    <string name="hash_rmd160">RIPEMD-160</string>
    <string name="hash_hmac_rmd160">HMAC-RIPEMD-160</string>

    <string-array name="hash_algorithms">
        <item>@string/hash_md4</item>
        <item>@string/hash_hmac_md4</item>
        <item>@string/hash_md5</item>
        <item>@string/hash_md5_v6</item>
        <item>@string/hash_hmac_md5</item>
        <item>@string/hash_hmac_md5_v6</item>
        <item>@string/hash_sha1</item>
        <item>@string/hash_hmac_sha1</item>
        <item>@string/hash_sha256</item>
        <item>@string/hash_hmac_sha256_fix</item>
        <item>@string/hash_hmac_sha256</item>
        <item>@string/hash_rmd160</item>
        <item>@string/hash_hmac_rmd160</item>
    </string-array>

    <!-- l33t strings -->
    <string name="l33t_use_never">Never</string>
    <string name="l33t_use_after">After hashing</string>
    <string name="l33t_use_before">Before hashing</string>
    <string name="l33t_use_before_and_after">Before &amp; after hashing</string>

    <string-array name="l33t_orders">
        <item>@string/l33t_use_never</item>
        <item>@string/l33t_use_before</item>
        <item>@string/l33t_use_after</item>
        <item>@string/l33t_use_before_and_after</item>
    </string-array>

    <string name="l33t_level_1">Level 1</string>
    <string name="l33t_level_2">Level 2</string>
    <string name="l33t_level_3">Level 3</string>
    <string name="l33t_level_4">Level 4</string>
    <string name="l33t_level_5">Level 5</string>
    <string name="l33t_level_6">Level 6</string>
    <string name="l33t_level_7">Level 7</string>
    <string name="l33t_level_8">Level 8</string>
    <string name="l33t_level_9">Level 9</string>
    <string name="using_text">Using text: %1$s</string>

    <string-array name="l33t_levels">
        <item>@string/l33t_level_1</item>
        <item>@string/l33t_level_2</item>
        <item>@string/l33t_level_3</item>
        <item>@string/l33t_level_4</item>
        <item>@string/l33t_level_5</item>
        <item>@string/l33t_level_6</item>
        <item>@string/l33t_level_7</item>
        <item>@string/l33t_level_8</item>
        <item>@string/l33t_level_9</item>
    </string-array>

</resources>
