<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_label_name"
            style="?android:listSeparatorTextViewStyle" />
        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:inputType="text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_label_url_components"
            style="?android:listSeparatorTextViewStyle" />
        <CheckBox
            android:id="@+id/use_protocol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/profile_edit_label_url_protocol" />
        <CheckBox
            android:id="@+id/use_subdomain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/profile_edit_label_url_subdomains" />
        <CheckBox
            android:id="@+id/use_domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/profile_edit_label_url_domain" />
        <CheckBox
            android:id="@+id/use_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/profile_edit_label_url_other" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_label_hashing_algorithm"
            style="?android:listSeparatorTextViewStyle" />
        <Spinner
            android:id="@+id/hashing_algorithm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_label_l33t_options"
            style="?android:listSeparatorTextViewStyle" />
        <Spinner
            android:id="@+id/l33t_order"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp" />
        <Spinner
            android:id="@+id/l33t_level"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_label_password_length"
            style="?android:listSeparatorTextViewStyle" />
        <EditText
            android:id="@+id/password_length"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:inputType="number" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_label_username"
            style="?android:listSeparatorTextViewStyle" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:inputType="text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_label_modifier"
            style="?android:listSeparatorTextViewStyle" />
        <EditText
            android:id="@+id/modifier"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:inputType="text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_label_charset"
            style="?android:listSeparatorTextViewStyle" />
        <Spinner
            android:id="@+id/character_set"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp" />
        <EditText
            android:id="@+id/custom_character_set"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:hint="@string/profile_edit_hint_custom_charset" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_label_password_prefix"
            style="?android:listSeparatorTextViewStyle" />
        <EditText
            android:id="@+id/password_prefix"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:inputType="text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_label_password_suffix"
            style="?android:listSeparatorTextViewStyle" />
        <EditText
            android:id="@+id/password_suffix"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:inputType="text" />
    </LinearLayout>
</ScrollView>